+ Added: New flag BLOCK_SPREADING: https://github.com/Angeschossen/Lands/wiki/Natural-Flags