@@ -963,8 +963,11 @@ database:
     # If true: This server will execute tasks, such as upkeep, taxes etc. for all lands across all servers that are connected to the same Lands database and Redis.
     master: false
 
+  # Use SQLite for the database. Doesn't require a database server.
+  sqlite-v2: false
+
   ##########################################################
-  # Deprecated MySQL schema. Use mysql-v2 (above) instead. #
+  # Deprecated SQL schema. Use mysql-v2 (above) instead. #
   ##########################################################
   mysql:
     enabled_20: false
