@@ -1,1 +1,7 @@
+Attention: The old SQLite and MySQL database schemas are no longer supported, please migrate to the new ones, if you don't
+use SQLite-v2 or MySQL-v2 in the configuration. The plugin will send you a warning at startup, if this is the case.
+Instructions: https://github.com/Angeschossen/Lands/wiki/Database#schema-migration
+
+While the old schema still works, its recommended to migrate to the new one for better performance and future features.
+
 + Added: New flag BLOCK_SPREADING: https://github.com/Angeschossen/Lands/wiki/Natural-Flags
